--- a/src/App.css
+++ b/src/App.css
@@ -1134,37 +1134,33 @@
 
 
   /*loading-start*/
-  /* App.css dosyanıza ekleyebilirsiniz */
-  /* Sayfa yüklendikten sonra loading ekranını tam görünür tutalım */
-  .loading-active * {
-    visibility: hidden;
-    /* Her şeyin görünmemesini sağlıyoruz */
-    display: none;
-    /* Herhangi bir şeyin görünmemesini engelliyoruz */
-  }
-
-  /* Loading ekranı aktifken sadece loading ekranını gösterelim */
-  .loading-active .loading-container {
-    visibility: visible;
-    display: block;
-  }
-
-  /* Loading ekranı tam ekran olmalı */
+  /* Loading ekranını tam ekran yapıyoruz */
   .loading-container {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
-    /* Yarı şeffaf arka plan */
+    background-color: rgba(38, 56, 156, 0.7);
+    /* Yarı şeffaf bir arka plan */
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999;
-    visibility: visible;
+    /* En üst katmanda olacak */
   }
 
+  /* Spinner yazısının stilini verelim */
+  .spinner {
+    font-size: 24px;
+    color: rgb(29, 95, 150);
+    font-weight: bold;
+  }
+
+  /* Eğer loading ekranı bitince başka bileşenlerin görünmesini engellemek için */
+  body {
+    overflow: hidden;
+  }
 
 
 
