--- a/src/App.css
+++ b/src/App.css
@@ -546,14 +546,14 @@
     }
   }
 
-  .active {
+  .link.active {
     position: relative;
   }
 
-  .active::after {
+  .link.active::after {
     position: absolute;
     content: '';
-    bottom: -3px;
+    bottom: -36px;
     left: 0;
     background-color: white;
     width: 100%;
@@ -800,6 +800,8 @@
 
   /*header-desktop-start*/
 
+  /* header-desktop-start */
+
   .header {
     padding-left: 55px;
     padding-top: 64px;
@@ -836,20 +838,29 @@
     display: flex;
     gap: 12px;
     font-size: 16px;
-  }
-
-  .active {
     position: relative;
   }
 
-  .active::after {
+  /* Line (Beyaz Çizgi) Başlangıçta Gizli */
+  .line {
     position: absolute;
-    content: '';
-    bottom: -36px;
     background-color: white;
-    width: 100%;
     height: 3px;
+    width: 0;
+    /* Başlangıçta görünmüyor */
+    top: 128px;
+    /* Başlangıç konumu */
+    left: 0;
+    /* Sol hizalama */
+    transition: all 0.3s ease-out;
+    /* Animasyon */
+    opacity: 0;
+    /* Başlangıçta görünmez */
   }
+
+  /* header-desktop-end */
+
+
 
   /*header-desktop-end*/
 
