--- a/src/App.css
+++ b/src/App.css
@@ -1175,6 +1175,14 @@
   }
 
 
+  .desktop-only.technology-image {
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    /* Görsellerin 3D dönüşümünü düzgün gösterebilmek için */
+    transition: transform 0.3s ease;
+    /* Hover durumunda animasyon */
+  }
+
 
 
   /*technology-desktop-end*/
